HTML에서 입력받은 DATA를 Post요청 후 DB에 저장하는 방법

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -11,7 +11,11 @@
 </head>
 
 <body>
-
+    <div class="nav">
+        <a class="logo">SpringMall</a>
+        <a>List</a>
+        <a>Write</a>
+    </div>
     <div class="card" th:each="a : ${items}">
         <img src="https://placehold.co/300">
         <div>
