html 반복사용 thymeleaf fragment 문법

--- a/src/main/resources/templates/write.html
+++ b/src/main/resources/templates/write.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="/main.css">
 </head>
 <body>
+    <div th:replace="~{nav.html::navbar}"></div>
     <form action="/add" method="post">
         <input type="text" name="title">
         <input type="text" name="price">
