--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -23,6 +23,11 @@
     letter-spacing: -0.5px;
 }
 
+.nav a:visited {
+    color: black;
+    text-decoration: none;
+}
+
 .nav .logo {
     font-weight: 800;
 }
