--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -11,11 +11,7 @@
 </head>
 
 <body>
-    <div class="nav">
-        <a class="logo">SpringMall</a>
-        <a>List</a>
-        <a>Write</a>
-    </div>
+    <div th:replace="~{nav.html::navbar}"></div>
     <div class="card" th:each="a : ${items}">
         <img src="https://placehold.co/300">
         <div>
