DB에서 GET한 DATA의 ID를 상세페이지 URL에 parameter로 넣고 HTML에 DATA 입력하는 thymeleaf 문법, 예외처리 error.html

--- a/src/main/resources/templates/list.html
+++ b/src/main/resources/templates/list.html
@@ -16,6 +16,7 @@
         <img src="https://placehold.co/300">
         <div>
             <h4 th:text="${a.title}"></h4>
+            <a th:href="'detail/' + ${a.id}">링크</a>
             <p th:text="${a.price}+'원'"></p>
         </div>
     </div>
