--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -8,6 +8,11 @@
     margin-right: 20px;
 }
 
+.card a {
+    color: black;
+    text-decoration: none;
+}
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&display=swap');
 .nav {
     display: flex;
